--- a/source/css/defaultImg.css
+++ b/source/css/defaultImg.css
@@ -54,3 +54,76 @@
     background-position: 400%;
   }
 }
+/* link.css */
+#article-container a.link-card {
+  display: inline-flex;
+  align-items: center;
+  min-width: 200px;
+  max-width: 361px;
+  margin: 0.25rem auto;
+  color: #444;
+  text-align: center;
+  text-decoration: none;
+  background: #f6f6f6;
+  border-radius: 12px;
+  cursor: pointer;
+}
+#article-container a.link-card:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+}
+#article-container a.link-card div.left {
+  position: relative;
+  flex-shrink: 0;
+  width: 48px;
+  height: 48px;
+  margin: 12px;
+  overflow: hidden;
+}
+#article-container a.link-card div.left i {
+  margin-left: 4px;
+  font-size: 32px;
+  line-height: 48px;
+}
+#article-container a.link-card div.left img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: block;
+  border-radius: 2px;
+  transform: translate(-50%, -50%);
+}
+#article-container a.link-card div.right {
+  margin-right: 12px;
+  overflow: hidden;
+}
+#article-container a.link-card p {
+  margin: 0;
+}
+#article-container a.link-card p.text {
+  font-weight: bold;
+}
+#article-container a.link-card p.url {
+  flex-shrink: 0;
+  color: rgba(68, 68, 68, 0.65);
+  font-size: 13px;
+}
+@media screen and (max-width: 425px) {
+  #article-container a.link-card {
+    max-width: 100%;
+  }
+}
+@media screen and (max-width: 375px) {
+  #article-container a.link-card {
+    width: 100%;
+  }
+}
+#article-container a.link-card div.left,
+#article-container a.link-card div.right {
+  pointer-events: none;
+}
+[data-theme='dark'] #article-container a.link-card {
+  filter: brightness(0.7);
+}
+[data-theme='dark'] #article-container a.link-card img {
+  filter: brightness(1);
+}
