--- a/source/css/defaultImg.css
+++ b/source/css/defaultImg.css
@@ -152,6 +152,6 @@ table th {
   padding: 5px 10px;
   font-weight: bold;
   font-size: 12px;
-  font-family: 'Verdana';
-  text-align: center;
+  /* font-family: 'Verdana'; */
+  /* text-align: center; */
 }
